@@ -1,5 +1,7 @@
 Changes with APR-util b1  
 
+  *) Add support for Berkeley DB4.  [Justin Erenkrantz]
+
   *) Improve testdbm help.  [Justin Erenkrantz]
 
   *) Improve autoconf detection of DBMs.  [Justin Erenkrantz]
